# rust_cs_fundamentals

./: .gitignore  Cargo.toml  README.md  config.toml
algorithms/: Cargo.toml  README.md
algorithms/src/: lib.rs
algorithms/src/randomize/: lcg.rs  mod.rs
algorithms/src/searching/: binary.rs  linear.rs  mod.rs
algorithms/src/sorting/: README.md  bubble.rs  insertion.rs  merge.rs  mod.rs  quick.rs  utils.rs
datastructures/: Cargo.toml  README.md
datastructures/src/: lib.rs
datastructures/src/fifo/: mod.rs
datastructures/src/lifo/: mod.rs
datastructures/src/list/: mod.rs
