cargo-features = ["edition2024"]

[workspace]
members = ["algorithms"]
resolver = "2"


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
cargo = "warn"
