cargo-features = ["edition2024"]

[package]
name = "cs-fundamentals-algorithms"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/JamesClarke7283/rust_cs_fundamentals"
description = "Basic Fundamental CS algorithms, every programmer should know, use this as a learning resource"
license = "CC0-1.0"
keywords = ["algorithms", "fundamentals", "searching", "sorting", "educational"]
categories = ["Algorithms"]
readme = "README.md"
authors = ["James Clarke <james@jamesdavidclarke.com>"]

[lints]
workspace = true

[dependencies]
num-traits = "0.2"
